# nexus-core

./: .env  .env.example  .gitignore  Dockerfile  README.md  create_test_pdf.py  docker-compose.yml  main.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  structure.md  webhook_server.py
.github/workflows/: deploy.yml
apps/agent/: Dockerfile  package-lock.json  package.json
apps/agent/src/mastra/: index.ts
apps/agent/src/mastra/agents/: index.ts  transcriptionAgent.ts
apps/agent/src/mastra/tools/: ghostTools.ts  githubTools.ts  transcriptionTools.ts  twitter.ts
apps/agent/src/mastra/workflows/: index.ts  transcriptWorkflow.ts  transcriptionWorkflow.ts
apps/rtmp-server/: Dockerfile  pyproject.toml
apps/rtmp-server/src/: main.py
apps/web/: Dockerfile  next.config.js  package.json
apps/websocket-server/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/websocket-server/alembic/: env.py
apps/websocket-server/alembic/versions/: 20240321_add_sponsor_model.py  20240401_add_documents_table.py
apps/websocket-server/src/: api.py  main.py  test_all_flows.py  test_websocket.py  types.py
migrations/: env.py
migrations/versions/: d790e3e4afbb_add_entity_recognition_table.py
