[project]
name = "rtmp-server"
version = "0.1.0"
description = "RTMP live streaming platform with real-time transcription"
authors = []
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "reportlab>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

 [tool.hatch.build.targets.wheel]
 packages = ["apps/websocket-server"]
