[project]
name = "websocket-server"
version = "0.1.0"
description = "WebSocket server for transcription events"
dependencies = [
    "fastapi==0.115.9",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "aiohttp>=3.11.14",
    "chromadb>=1.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
